Finally got the integration tests working with a CQ instance